Testy/IPP-test.php-master/parse-only/vyzi_tests/should-fail/wrong_arg_type4.src
.IPPcode20
PUSHS labelhahah
